[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.5"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
flate2 = "1.1"
horrorshow = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
iron = "0.6"
log = "0.4"
router = "0.6"
serde_json = "1.0"
# Use the same unicase version that iron uses
unicase = "1.4"
# Use time 0.3 with macros feature for datetime literals
time = { version = "0.3", features = ["macros", "formatting"] }
# Add the old time crate for compatibility with iron
time01 = { version = "0.1", package = "time" }

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
