[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.5"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
flate2 = "1.1"
horrorshow = "0.8"
hyper = { version = "1.6", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "http1"] }
http-body-util = "0.1"
tokio = { version = "1.44", features = ["full"] }
hyper-rustls = { version = "0.26", features = ["http1", "http2", "tls12", "webpki-roots"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting"] }
http = "1.3"

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
