[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.6"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help", "env"] }
flate2 = "1.1"
horrorshow = "0.8"
hyper = { version = "1.7", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "0.1"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting"] }
http = "1.3"
mimalloc = "0.1"
regex = "1.11"
home = "0.5"

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
